--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,7 +47,7 @@ dependencies:
   photo_view: ^0.13.0
   flutter_svg: ^1.0.3
   another_xlider: ^1.0.1+2
-  scrollable_positioned_list: ^0.3.2
+  scrollable_positioned_list: ^0.2.0-nullsafety.0
 
 dev_dependencies:
   flutter_test:
