--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   protobuf: ^2.0.1
   url_launcher: ^6.1.2
-  flutter_styled_toast: ^2.1.3
+  flutter_styled_toast: 2.0.0
   permission_handler: ^9.2.0
   flutter_colorpicker: ^1.0.3
   crypto: ^3.0.2
@@ -46,7 +46,7 @@ dependencies:
   clipboard: ^0.1.3
   photo_view: ^0.13.0
   flutter_svg: ^1.0.3
-  another_xlider: ^1.0.1+2
+  another_xlider: 1.0.1+2
   scrollable_positioned_list: ^0.2.0-nullsafety.0
 
 dev_dependencies:
