--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -231,6 +231,12 @@ jobs:
         run: |
           go install github.com/go-flutter-desktop/hover@latest
 
+      - name: Modify version (desktop)
+        if: steps.check_asset.outputs.skip_build != 'true' && ( matrix.config.target != 'linux' && matrix.config.target == 'windows' && matrix.config.target == 'macos')
+        run: |
+          sed -i "s/another_xlider: 1.0.1+2/another_xlider: ^1.0.1+2/g" pubspec.yaml
+          sed -i "s/flutter_styled_toast: 2.0.0/flutter_styled_toast: ^2.0.0/g" pubspec.yaml
+
       - name: Install go mobile (mobile)
         if: steps.check_asset.outputs.skip_build != 'true' && ( matrix.config.target == 'ios' || matrix.config.target == 'android-arm64' || matrix.config.target == 'android-arm32' || matrix.config.target == 'android-x86_64' )
         run: |
