--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -12,7 +12,7 @@ jobs:
 
   ci-pass:
     name: CI is green
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     needs:
       - check_release
       - build_release_assets
@@ -21,7 +21,7 @@ jobs:
 
   check_release:
     name: Check release
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v3
         with:
@@ -53,7 +53,7 @@ jobs:
       matrix:
         config:
           - target: linux
-            host: ubuntu-latest
+            host: ubuntu-20.04
             flutter_version: '2.10.3'
           - target: windows
             host: windows-latest
@@ -65,22 +65,22 @@ jobs:
             host: macos-latest
             flutter_version: '3.0.0'
           - target: android-arm32
-            host: ubuntu-latest
+            host: ubuntu-20.04
             flutter_version: '2.10.3'
           - target: android-arm64
-            host: ubuntu-latest
+            host: ubuntu-20.04
             flutter_version: '2.10.3'
           - target: android-x86_64
-            host: ubuntu-latest
+            host: ubuntu-20.04
             flutter_version: '2.10.3'
           - target: android-arm32
-            host: ubuntu-latest
+            host: ubuntu-20.04
             flutter_version: '3.0.0'
           - target: android-arm64
-            host: ubuntu-latest
+            host: ubuntu-20.04
             flutter_version: '3.0.0'
           - target: android-x86_64
-            host: ubuntu-latest
+            host: ubuntu-20.04
             flutter_version: '3.0.0'
 
     runs-on: ${{ matrix.config.host }}
@@ -231,11 +231,18 @@ jobs:
         run: |
           go install github.com/go-flutter-desktop/hover@latest
 
-      - name: Upgrade deps version (non-desktop)
-        if: steps.check_asset.outputs.skip_build != 'true' && ( matrix.config.target != 'linux' && matrix.config.target != 'windows' && matrix.config.target != 'macos')
+      - name: Upgrade deps version (Android)
+        if: steps.check_asset.outputs.skip_build != 'true' && ( matrix.config.target != 'linux' && matrix.config.target != 'windows' && matrix.config.target != 'macos' && matrix.config.target != 'ios')
         run: |
           sed -i "s/another_xlider: 1.0.1+2/another_xlider: ^1.0.1+2/g" pubspec.yaml
           sed -i "s/flutter_styled_toast: 2.0.0/flutter_styled_toast: ^2.0.0/g" pubspec.yaml
+
+      - name: Upgrade deps version (iOS)
+        if: steps.check_asset.outputs.skip_build != 'true' && matrix.config.target == 'ios'
+        run: |
+          brew install gnu-sed
+          gsed -i "s/another_xlider: 1.0.1+2/another_xlider: ^1.0.1+2/g" pubspec.yaml
+          gsed -i "s/flutter_styled_toast: 2.0.0/flutter_styled_toast: ^2.0.0/g" pubspec.yaml
 
       - name: Install go mobile (mobile)
         if: steps.check_asset.outputs.skip_build != 'true' && ( matrix.config.target == 'ios' || matrix.config.target == 'android-arm64' || matrix.config.target == 'android-arm32' || matrix.config.target == 'android-x86_64' )
