--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -218,13 +218,16 @@ jobs:
         env:
           ACTIONS_ALLOW_UNSECURE_COMMANDS: 'true'
         run: |
-          curl -JOL https://github.com/AppImage/AppImageKit/releases/download/continuous/appimagetool-x86_64.AppImage
-          chmod a+x appimagetool-x86_64.AppImage
-          mkdir -p ${GITHUB_WORKSPACE}/bin
-          mv appimagetool-x86_64.AppImage ${GITHUB_WORKSPACE}/bin/appimagetool
-          echo ::add-path::${GITHUB_WORKSPACE}/bin
           sudo apt-get update
           sudo apt-get install -y libgl1-mesa-dev xorg-dev
+          mkdir -p ${GITHUB_WORKSPACE}/bin
+          cd ${GITHUB_WORKSPACE}/bin
+          echo ::add-path::${GITHUB_WORKSPACE}/bin
+          curl -LO https://www.ghproxy.com/https://github.com/AppImage/AppImageKit/releases/download/continuous/appimagetool-x86_64.AppImage
+          chmod a+x appimagetool-x86_64.AppImage
+          sed 's|AI\x02|\x00\x00\x00|g' -i appimagetool-x86_64.AppImage
+          ./appimagetool-x86_64.AppImage --appimage-extract
+          mv squashfs-root appimagetool
 
       - name: Install hover (desktop)
         if: steps.check_asset.outputs.skip_build != 'true' && ( matrix.config.target == 'linux' || matrix.config.target == 'windows' || matrix.config.target == 'macos')
