--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -223,7 +223,7 @@ jobs:
           mkdir -p ${GITHUB_WORKSPACE}/bin
           cd ${GITHUB_WORKSPACE}/bin
           echo ::add-path::${GITHUB_WORKSPACE}/bin
-          curl -LO https://www.ghproxy.com/https://github.com/AppImage/AppImageKit/releases/download/continuous/appimagetool-x86_64.AppImage
+          curl -LO https://github.com/AppImage/AppImageKit/releases/download/continuous/appimagetool-x86_64.AppImage
           chmod a+x appimagetool-x86_64.AppImage
           sed 's|AI\x02|\x00\x00\x00|g' -i appimagetool-x86_64.AppImage
           ./appimagetool-x86_64.AppImage --appimage-extract
