--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -234,13 +234,13 @@ jobs:
           go install github.com/go-flutter-desktop/hover@latest
 
       - name: Upgrade deps version (Android)
-        if: steps.check_asset.outputs.skip_build != 'true' && matrix.config.host != 'macos' && startsWith(matrix.config.flutter_version, '3')
+        if: steps.check_asset.outputs.skip_build != 'true' && matrix.config.host != 'macos-latest' && startsWith(matrix.config.flutter_version, '3')
         run: |
           sed -i "s/another_xlider: 1.0.1+2/another_xlider: ^1.0.1+2/g" pubspec.yaml
           sed -i "s/flutter_styled_toast: 2.0.0/flutter_styled_toast: ^2.0.0/g" pubspec.yaml
 
       - name: Upgrade deps version (iOS)
-        if: steps.check_asset.outputs.skip_build != 'true' && matrix.config.host == 'macos' && startsWith(matrix.config.flutter_version, '3')
+        if: steps.check_asset.outputs.skip_build != 'true' && matrix.config.host == 'macos-latest' && startsWith(matrix.config.flutter_version, '3')
         run: |
           brew install gnu-sed
           gsed -i "s/another_xlider: 1.0.1+2/another_xlider: ^1.0.1+2/g" pubspec.yaml
