--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -16,6 +16,7 @@ jobs:
     needs:
       - check_release
       - build_release_assets
+      - send_to_community
     steps:
       - run: exit 0
 
@@ -63,7 +64,7 @@ jobs:
             flutter_version: '2.10.3'
           - target: ios
             host: macos-latest
-            flutter_version: '3.0.1'
+            flutter_version: '3.0.4'
           - target: android-arm32
             host: ubuntu-20.04
             flutter_version: '2.10.5'
@@ -75,13 +76,13 @@ jobs:
             flutter_version: '2.10.5'
           - target: android-arm32
             host: ubuntu-20.04
-            flutter_version: '3.0.1'
+            flutter_version: '3.0.4'
           - target: android-arm64
             host: ubuntu-20.04
-            flutter_version: '3.0.1'
+            flutter_version: '3.0.4'
           - target: android-x86_64
             host: ubuntu-20.04
-            flutter_version: '3.0.1'
+            flutter_version: '3.0.4'
 
     runs-on: ${{ matrix.config.host }}
 
@@ -320,4 +321,38 @@ jobs:
         run: |
           cd ci
           go run ./cmd/upload_asset
+
+  send_to_community:
+    needs:
+      - check_release
+      - build_release_assets
+    name: Send message to community
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          repository: ${{ github.event.inputs.repo }}
+          ref: 'master'
+      - uses: actions/setup-go@v2
+        with:
+          go-version: ${{ env.go_version }}
+      - name: Cache go modules
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.cache/go-build
+            ~/go/pkg/mod
+          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-go-
+      - name: Send to community
+        env:
+          TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
+          TG_CHAT_IDS: ${{ secrets.TG_CHAT_IDS }}
+          DISCORD_BOT_TOKEN: ${{ secrets.DISCORD_BOT_TOKEN }}
+          DISCORD_CHAT_IDS: ${{ secrets.DISCORD_CHAT_IDS }}
+        run: |
+          cd ci
+          go run ./cmd/send_to_community
+
 
