--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -64,7 +64,10 @@ jobs:
             flutter_version: '2.10.3'
           - target: ios
             host: macos-latest
-            flutter_version: '3.3.4'
+            flutter_version: '3.3.8'
+          - target: ios
+            host: macos-latest
+            flutter_version: '2.10.5'
           - target: android-arm32
             host: ubuntu-20.04
             flutter_version: '2.10.5'
@@ -76,13 +79,13 @@ jobs:
             flutter_version: '2.10.5'
           - target: android-arm32
             host: ubuntu-20.04
-            flutter_version: '3.3.4'
+            flutter_version: '3.3.8'
           - target: android-arm64
             host: ubuntu-20.04
-            flutter_version: '3.3.4'
+            flutter_version: '3.3.8'
           - target: android-x86_64
             host: ubuntu-20.04
-            flutter_version: '3.3.4'
+            flutter_version: '3.3.8'
 
     runs-on: ${{ matrix.config.host }}
 
