--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = wax
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = niuhuan.wax
+PRODUCT_BUNDLE_IDENTIFIER = opensource.wax
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2022 niuhuan. All rights reserved.
