--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,12 +37,12 @@ dependencies:
   protobuf: ^2.0.1
   url_launcher: ^6.1.2
   flutter_styled_toast: 2.0.0
-  permission_handler: ^9.2.0
+  permission_handler: ^10.1.0
   flutter_colorpicker: ^1.0.3
   crypto: ^3.0.2
   event: ^2.1.2
   convert: ^3.0.1
-  modal_bottom_sheet: ^2.0.1
+  modal_bottom_sheet: ^3.0.0-pre
   clipboard: ^0.1.3
   photo_view: ^0.13.0
   flutter_svg: ^1.0.3
