--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,7 @@ dependencies:
   crypto: ^3.0.2
   event: ^2.1.2
   convert: ^3.0.1
-  modal_bottom_sheet: ^3.0.0-pre
+  modal_bottom_sheet: 2.0.1
   clipboard: ^0.1.3
   photo_view: ^0.13.0
   flutter_svg: ^1.0.3
