--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -64,28 +64,34 @@ jobs:
             flutter_version: '2.10.3'
           - target: ios
             host: macos-latest
-            flutter_version: '3.7.3'
+            flutter_version: '3.10.5'
           - target: ios
             host: macos-latest
             flutter_version: '2.10.5'
           - target: android-arm32
             host: ubuntu-20.04
             flutter_version: '2.10.5'
+            jdk_version: '8'
           - target: android-arm64
             host: ubuntu-20.04
             flutter_version: '2.10.5'
+            jdk_version: '8'
           - target: android-x86_64
             host: ubuntu-20.04
             flutter_version: '2.10.5'
+            jdk_version: '8'
           - target: android-arm32
             host: ubuntu-20.04
-            flutter_version: '3.7.3'
+            flutter_version: '3.10.5'
+            jdk_version: '17'
           - target: android-arm64
             host: ubuntu-20.04
-            flutter_version: '3.7.3'
+            flutter_version: '3.10.5'
+            jdk_version: '17'
           - target: android-x86_64
             host: ubuntu-20.04
-            flutter_version: '3.7.3'
+            flutter_version: '3.10.5'
+            jdk_version: '17'
 
     runs-on: ${{ matrix.config.host }}
 
@@ -200,7 +206,7 @@ jobs:
         if: steps.check_asset.outputs.skip_build != 'true' && ( matrix.config.target == 'android-arm32' || matrix.config.target == 'android-arm64' || matrix.config.target == 'android-x86_64' )
         uses: actions/setup-java@v3
         with:
-          java-version: 8
+          java-version: ${{ matrix.config.jdk_version }}
           distribution: 'zulu'
 
       - name: Setup android tools (Android)
@@ -240,19 +246,21 @@ jobs:
           go install github.com/go-flutter-desktop/hover@latest
 
       - name: Upgrade deps version (Android)
-        if: steps.check_asset.outputs.skip_build != 'true' && matrix.config.host != 'macos-latest' && startsWith(matrix.config.flutter_version, '3')
+        if: steps.check_asset.outputs.skip_build != 'true' && matrix.config.host != 'macos-latest' && startsWith(matrix.config.flutter_version, '2')
         run: |
-          sed -i "s/another_xlider: 1.0.1+2/another_xlider: ^1.0.1+2/g" pubspec.yaml
-          sed -i "s/flutter_styled_toast: 2.0.0/flutter_styled_toast: ^2.0.0/g" pubspec.yaml
-          sed -i "s/modal_bottom_sheet: 2.0.1/modal_bottom_sheet: ^3.0.0-pre/g" pubspec.yaml
+          sed -i "s/another_xlider: ^1.0.1+2/another_xlider: 1.0.1+2/g" pubspec.yaml
+          sed -i "s/flutter_styled_toast: ^2.0.0/flutter_styled_toast: 2.0.0/g" pubspec.yaml
+          sed -i "s/modal_bottom_sheet: ^3.0.0-pre/modal_bottom_sheet: 2.0.1/g" pubspec.yaml
+          sed -i "s/photo_view: ^0.14.0/photo_view: 0.13.0/g" pubspec.yaml
 
       - name: Upgrade deps version (iOS)
-        if: steps.check_asset.outputs.skip_build != 'true' && matrix.config.host == 'macos-latest' && startsWith(matrix.config.flutter_version, '3')
+        if: steps.check_asset.outputs.skip_build != 'true' && matrix.config.host == 'macos-latest' && startsWith(matrix.config.flutter_version, '2')
         run: |
           brew install gnu-sed
-          gsed -i "s/another_xlider: 1.0.1+2/another_xlider: ^1.0.1+2/g" pubspec.yaml
-          gsed -i "s/flutter_styled_toast: 2.0.0/flutter_styled_toast: ^2.0.0/g" pubspec.yaml
-          gsed -i "s/modal_bottom_sheet: 2.0.1/modal_bottom_sheet: ^3.0.0-pre/g" pubspec.yaml
+          gsed -i "s/another_xlider: ^1.0.1+2/another_xlider: 1.0.1+2/g" pubspec.yaml
+          gsed -i "s/flutter_styled_toast: ^2.0.0/flutter_styled_toast: 2.0.0/g" pubspec.yaml
+          gsed -i "s/modal_bottom_sheet: ^3.0.0-pre/modal_bottom_sheet: 2.0.1/g" pubspec.yaml
+          gsed -i "s/photo_view: ^0.14.0/photo_view: 0.13.0/g" pubspec.yaml
 
       - name: Install go mobile (mobile)
         if: steps.check_asset.outputs.skip_build != 'true' && ( matrix.config.target == 'ios' || matrix.config.target == 'android-arm64' || matrix.config.target == 'android-arm32' || matrix.config.target == 'android-x86_64' )
