--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.1.13+13
+version: 1.1.6+6
 
 environment:
   sdk: ">=2.16.1 <3.0.0"
@@ -36,17 +36,17 @@ dependencies:
   cupertino_icons: ^1.0.2
   protobuf: ^2.0.1
   url_launcher: ^6.1.2
-  flutter_styled_toast: 2.0.0
+  flutter_styled_toast: ^2.0.0
   permission_handler: ^10.1.0
   flutter_colorpicker: ^1.0.3
   crypto: ^3.0.2
   event: ^2.1.2
   convert: ^3.0.1
-  modal_bottom_sheet: 2.0.1
+  modal_bottom_sheet: ^3.0.0-pre
   clipboard: ^0.1.3
-  photo_view: ^0.13.0
+  photo_view: ^0.14.0
   flutter_svg: ^1.0.3
-  another_xlider: 1.0.1+2
+  another_xlider: ^1.0.1+2
   scrollable_positioned_list: ^0.2.0-nullsafety.0
   flutter_search_bar: ^3.0.0-dev.1
 
