--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -12,7 +12,7 @@ jobs:
 
   ci-pass:
     name: CI is green
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     needs:
       - check_release
       - build_release_assets
@@ -22,7 +22,7 @@ jobs:
 
   check_release:
     name: Check release
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
         with:
@@ -53,45 +53,36 @@ jobs:
       fail-fast: false
       matrix:
         config:
-          - target: linux
-            host: ubuntu-20.04
-            flutter_version: '2.10.3'
           - target: windows
             host: windows-latest
             flutter_version: '2.10.3'
           - target: macos
             host: macos-latest
             flutter_version: '2.10.3'
+          - target: linux
+            host: ubuntu-latest
+            flutter_version: '2.10.3'
           - target: ios
             host: macos-latest
-            flutter_version: '3.10.5'
-          - target: ios
-            host: macos-latest
+            flutter_version: '3.7.3'
+          - target: android-arm32
+            host: ubuntu-latest
+            flutter_version: '2.10.5'
+          - target: android-arm64
+            host: ubuntu-latest
+            flutter_version: '2.10.5'
+          - target: android-x86_64
+            host: ubuntu-latest
             flutter_version: '2.10.5'
           - target: android-arm32
-            host: ubuntu-20.04
-            flutter_version: '2.10.5'
-            jdk_version: '8'
+            host: ubuntu-latest
+            flutter_version: '3.7.3'
           - target: android-arm64
-            host: ubuntu-20.04
-            flutter_version: '2.10.5'
-            jdk_version: '8'
+            host: ubuntu-latest
+            flutter_version: '3.7.3'
           - target: android-x86_64
-            host: ubuntu-20.04
-            flutter_version: '2.10.5'
-            jdk_version: '8'
-          - target: android-arm32
-            host: ubuntu-20.04
-            flutter_version: '3.10.5'
-            jdk_version: '17'
-          - target: android-arm64
-            host: ubuntu-20.04
-            flutter_version: '3.10.5'
-            jdk_version: '17'
-          - target: android-x86_64
-            host: ubuntu-20.04
-            flutter_version: '3.10.5'
-            jdk_version: '17'
+            host: ubuntu-latest
+            flutter_version: '3.7.3'
 
     runs-on: ${{ matrix.config.host }}
 
@@ -155,27 +146,6 @@ jobs:
           flutter-version: ${{ env.flutter_version }}
           architecture: x64
 
-      - name: Install Protoc
-        if: steps.check_asset.outputs.skip_build != 'true'
-        uses: arduino/setup-protoc@v1
-        with:
-          version: '3.x'
-          repo-token: ${{ secrets.GH_TOKEN }}
-
-      - name: Setup protoc-gen-go and dart-protoc_plugin
-        if: steps.check_asset.outputs.skip_build != 'true'
-        run: |
-          go install github.com/golang/protobuf/protoc-gen-go@latest
-          dart pub global activate protoc_plugin
-
-      - name: dart-protoc path (non-windows)
-        if: steps.check_asset.outputs.skip_build != 'true' && matrix.config.target != 'windows'
-        run: echo "${HOME}/.pub-cache/bin" >> $GITHUB_PATH
-
-      - name: dart-protoc path (windows)
-        if: steps.check_asset.outputs.skip_build != 'true' && matrix.config.target == 'windows'
-        run: echo "${HOME}/.pub-cache/bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
-
       - name: Check core
         if: steps.check_asset.outputs.skip_build != 'true'
         uses: actions/checkout@v3
@@ -184,11 +154,6 @@ jobs:
           token: ${{ secrets.GH_TOKEN }}
           path: 'go'
 
-      - name: Gen proto class
-        if: steps.check_asset.outputs.skip_build != 'true'
-        run: |
-          protoc --dart_out=lib/ --go_out=go/ protos/*.proto
-
       - name: Cache Flutter dependencies (Linux/Android)
         if: steps.check_asset.outputs.skip_build != 'true' && ( matrix.config.target == 'android-arm32' || matrix.config.target == 'android-arm64' || matrix.config.target == 'android-x86_64' || matrix.config.target == 'linux' )
         uses: actions/cache@v3
@@ -196,11 +161,29 @@ jobs:
           path: /opt/hostedtoolcache/flutter
           key: ${{ runner.os }}-flutter
 
+      - name: Cache Flutter dependencies (Mac host)
+        if: steps.check_asset.outputs.skip_build != 'true' && ( matrix.config.target == 'ios' || matrix.config.target == 'macos' )
+        uses: actions/cache@v3
+        with:
+          path: /Users/runner/hostedtoolcache/flutter
+          key: ${{ runner.os }}-flutter
+
+      - name: Cache Gradle dependencies (Android)
+        if: steps.check_asset.outputs.skip_build != 'true' && ( matrix.config.target == 'android-arm32' || matrix.config.target == 'android-arm64' || matrix.config.target == 'android-x86_64' )
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
+
       - name: Setup java (Android)
         if: steps.check_asset.outputs.skip_build != 'true' && ( matrix.config.target == 'android-arm32' || matrix.config.target == 'android-arm64' || matrix.config.target == 'android-x86_64' )
         uses: actions/setup-java@v3
         with:
-          java-version: ${{ matrix.config.jdk_version }}
+          java-version: 8
           distribution: 'zulu'
 
       - name: Setup android tools (Android)
@@ -211,7 +194,7 @@ jobs:
             platform-tools
             platforms;android-32
             build-tools;30.0.2
-            ndk;22.1.7171670
+            ndk;23.1.7779620
 
       - name: Setup msys2 (Windows)
         if: steps.check_asset.outputs.skip_build != 'true' && matrix.config.target == 'windows'
@@ -224,42 +207,18 @@ jobs:
         env:
           ACTIONS_ALLOW_UNSECURE_COMMANDS: 'true'
         run: |
-          sudo apt-get update
-          sudo apt-get install -y libgl1-mesa-dev xorg-dev
-          mkdir -p ${GITHUB_WORKSPACE}/bin
-          cd ${GITHUB_WORKSPACE}/bin
-          echo ::add-path::${GITHUB_WORKSPACE}/bin
-          curl -LO https://github.com/AppImage/AppImageKit/releases/download/continuous/appimagetool-x86_64.AppImage
+          curl -JOL https://github.com/AppImage/AppImageKit/releases/download/continuous/appimagetool-x86_64.AppImage
           chmod a+x appimagetool-x86_64.AppImage
-          sed 's|AI\x02|\x00\x00\x00|g' -i appimagetool-x86_64.AppImage
-          mv appimagetool-x86_64.AppImage appimagetool
+          mkdir -p ${GITHUB_WORKSPACE}/bin
+          mv appimagetool-x86_64.AppImage ${GITHUB_WORKSPACE}/bin/appimagetool
+          echo ::add-path::${GITHUB_WORKSPACE}/bin
+          sudo apt-get update
+          sudo apt-get install -y libgl1-mesa-dev xorg-dev libfuse2
 
       - name: Install hover (desktop)
         if: steps.check_asset.outputs.skip_build != 'true' && ( matrix.config.target == 'linux' || matrix.config.target == 'windows' || matrix.config.target == 'macos')
         run: |
           go install github.com/go-flutter-desktop/hover@latest
-
-      - name: Upgrade deps version (Android)
-        if: steps.check_asset.outputs.skip_build != 'true' && matrix.config.host != 'macos-latest' && startsWith(matrix.config.flutter_version, '2')
-        run: |
-          sed -i "s/another_xlider: ^1.0.1+2/another_xlider: 1.0.1+2/g" pubspec.yaml
-          sed -i "s/flutter_styled_toast: ^2.0.0/flutter_styled_toast: 2.0.0/g" pubspec.yaml
-          sed -i "s/modal_bottom_sheet: ^3.0.0-pre/modal_bottom_sheet: 2.0.1/g" pubspec.yaml
-          sed -i "s/photo_view: ^0.14.0/photo_view: 0.13.0/g" pubspec.yaml
-
-      - name: Upgrade deps version (iOS)
-        if: steps.check_asset.outputs.skip_build != 'true' && matrix.config.host == 'macos-latest' && startsWith(matrix.config.flutter_version, '2')
-        run: |
-          brew install gnu-sed
-          gsed -i "s/another_xlider: ^1.0.1+2/another_xlider: 1.0.1+2/g" pubspec.yaml
-          gsed -i "s/flutter_styled_toast: ^2.0.0/flutter_styled_toast: 2.0.0/g" pubspec.yaml
-          gsed -i "s/modal_bottom_sheet: ^3.0.0-pre/modal_bottom_sheet: 2.0.1/g" pubspec.yaml
-          gsed -i "s/photo_view: ^0.14.0/photo_view: 0.13.0/g" pubspec.yaml
-
-      - name: pub get
-        if: steps.check_asset.outputs.skip_build != 'true'
-        run: |
-          flutter pub get
 
       - name: Install go mobile (mobile)
         if: steps.check_asset.outputs.skip_build != 'true' && ( matrix.config.target == 'ios' || matrix.config.target == 'android-arm64' || matrix.config.target == 'android-arm32' || matrix.config.target == 'android-x86_64' )
@@ -271,6 +230,32 @@ jobs:
         run: |
           cd ci
           cp version.code.txt ../lib/assets/version.txt
+
+      - name: Upgrade deps version (flutter2 non-mac)
+        if: steps.check_asset.outputs.skip_build != 'true' && matrix.config.host != 'macos-latest' && startsWith(matrix.config.flutter_version, '2')
+        run: |
+          sed -i "s/another_xlider: ^1.0.1+2/another_xlider: 1.0.1+2/g" pubspec.yaml
+          sed -i "s/flutter_styled_toast: ^2.0.0/flutter_styled_toast: 2.0.0/g" pubspec.yaml
+          sed -i "s/filesystem_picker: ^3.0.0-beta.1/filesystem_picker: 2.0.0/g" pubspec.yaml
+          sed -i "s/file_picker: ^5.2.1/file_picker: 4.6.1/g" pubspec.yaml
+          sed -i "s/multi_select_flutter: ^4.0.0/multi_select_flutter: 4.1.2/g" pubspec.yaml
+          sed -i "s/modal_bottom_sheet: ^3.0.0-pre/modal_bottom_sheet: 2.0.1/g" pubspec.yaml
+          sed -i "s/photo_view: ^0.14.0/photo_view: 0.13.0/g" pubspec.yaml
+          flutter pub get
+
+      - name: Upgrade deps version (flutter2 mac)
+        if: steps.check_asset.outputs.skip_build != 'true' && matrix.config.host == 'macos-latest' && startsWith(matrix.config.flutter_version, '2')
+        run: |
+          brew install gnu-sed
+          gsed -i "s/another_xlider: ^1.0.1+2/another_xlider: 1.0.1+2/g" pubspec.yaml
+          gsed -i "s/flutter_styled_toast: ^2.0.0/flutter_styled_toast: 2.0.0/g" pubspec.yaml
+          gsed -i "s/filesystem_picker: ^3.0.0-beta.1/filesystem_picker: 2.0.0/g" pubspec.yaml
+          gsed -i "s/file_picker: ^5.2.1/file_picker: 4.6.1/g" pubspec.yaml
+          gsed -i "s/multi_select_flutter: ^4.0.0/multi_select_flutter: 4.1.2/g" pubspec.yaml
+          gsed -i "s/multi_select_flutter: ^4.0.0/multi_select_flutter: 4.1.2/g" pubspec.yaml
+          gsed -i "s/modal_bottom_sheet: ^3.0.0-pre/modal_bottom_sheet: 2.0.1/g" pubspec.yaml
+          gsed -i "s/Icons.energy_savings_leaf/Icons.ad_units/g" lib/screens/SettingsScreen.dart
+          flutter pub get
 
       - name: Build (windows)
         if: steps.check_asset.outputs.skip_build != 'true' && matrix.config.target == 'windows'
@@ -301,10 +286,10 @@ jobs:
           hover build linux-appimage
           mv go/build/outputs/linux-appimage-release/*.AppImage build/build.AppImage
 
-      - name: Add application-identifier (ios)
+      - name: Append application-identifier (ios)
         if: steps.check_asset.outputs.skip_build != 'true' && matrix.config.target == 'ios'
         run: |
-          /usr/libexec/PlistBuddy -c 'Add :application-identifier string opensource.wax' ios/Runner/Info.plist
+          /usr/libexec/PlistBuddy -c 'Add :application-identifier string niuhuan.wax' ios/Runner/Info.plist
 
       - name: Build (ios)
         if: steps.check_asset.outputs.skip_build != 'true' && matrix.config.target == 'ios'
@@ -340,6 +325,7 @@ jobs:
           cd ci
           go run ./cmd/upload_asset
 
+
   send_to_community:
     needs:
       - check_release
@@ -363,14 +349,5 @@ jobs:
           key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
           restore-keys: |
             ${{ runner.os }}-go-
-      - name: Send to community
-        env:
-          TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
-          TG_CHAT_IDS: ${{ secrets.TG_CHAT_IDS }}
-          DISCORD_BOT_TOKEN: ${{ secrets.DISCORD_BOT_TOKEN }}
-          DISCORD_CHAT_IDS: ${{ secrets.DISCORD_CHAT_IDS }}
-        run: |
-          cd ci
-          go run ./cmd/send_to_community
 
 
