--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -64,7 +64,19 @@ jobs:
             flutter_version: '2.10.3'
           - target: ios
             host: macos-latest
-            flutter_version: '3.7.3'
+            flutter_version: '3.10.5'
+          - target: ios
+            host: macos-latest
+            flutter_version: '2.10.5'
+          - target: android-arm32
+            host: ubuntu-latest
+            flutter_version: '3.10.5'
+          - target: android-arm64
+            host: ubuntu-latest
+            flutter_version: '3.10.5'
+          - target: android-x86_64
+            host: ubuntu-latest
+            flutter_version: '3.10.5'
           - target: android-arm32
             host: ubuntu-latest
             flutter_version: '2.10.5'
@@ -74,15 +86,6 @@ jobs:
           - target: android-x86_64
             host: ubuntu-latest
             flutter_version: '2.10.5'
-          - target: android-arm32
-            host: ubuntu-latest
-            flutter_version: '2.10.3'
-          - target: android-arm64
-            host: ubuntu-latest
-            flutter_version: '2.10.3'
-          - target: android-x86_64
-            host: ubuntu-latest
-            flutter_version: '2.10.3'
 
     runs-on: ${{ matrix.config.host }}
 
