--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.1.6+6
+version: 1.2.2+7
 
 environment:
   sdk: ">=2.16.1 <3.0.0"
@@ -49,6 +49,7 @@ dependencies:
   another_xlider: ^1.0.1+2
   scrollable_positioned_list: ^0.2.0-nullsafety.0
   flutter_search_bar: ^3.0.0-dev.1
+  file_picker: ^5.2.1
 
 dev_dependencies:
   flutter_test:
