--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -6,6 +6,7 @@ on:
 env:
   go_version: '1.17'
   flutter_channel: 'stable'
+  ndk_version: '23.1.7779620'
   GH_TOKEN: ${{ secrets.GH_TOKEN }}
 
 jobs:
@@ -197,7 +198,7 @@ jobs:
             platform-tools
             platforms;android-32
             build-tools;30.0.2
-            ndk;23.1.7779620
+            ndk;${{ env.ndk_version }}
 
       - name: Setup msys2 (Windows)
         if: steps.check_asset.outputs.skip_build != 'true' && matrix.config.target == 'windows'
