--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -39,35 +39,35 @@ jobs:
           - target: ios
             host: macos-latest
             flutter_version: '3.10.5'
-            go_version: '1.18'
+            go_version: '1.23'
           - target: ios
             host: macos-latest
             flutter_version: '2.10.5'
-            go_version: '1.18'
+            go_version: '1.23'
           - target: android-arm32
             host: ubuntu-latest
             flutter_version: '3.10.5'
-            go_version: '1.18'
+            go_version: '1.23'
           - target: android-arm64
             host: ubuntu-latest
             flutter_version: '3.10.5'
-            go_version: '1.18'
+            go_version: '1.23'
           - target: android-x86_64
             host: ubuntu-latest
             flutter_version: '3.10.5'
-            go_version: '1.18'
+            go_version: '1.23'
           - target: android-arm32
             host: ubuntu-latest
             flutter_version: '2.10.5'
-            go_version: '1.18'
+            go_version: '1.23'
           - target: android-arm64
             host: ubuntu-latest
             flutter_version: '2.10.5'
-            go_version: '1.18'
+            go_version: '1.23'
           - target: android-x86_64
             host: ubuntu-latest
             flutter_version: '2.10.5'
-            go_version: '1.18'
+            go_version: '1.23'
 
     runs-on: ${{ matrix.config.host }}
 
@@ -166,15 +166,12 @@ jobs:
           java-version: 11
           distribution: 'zulu'
 
-      - name: Setup android tools (Android)
-        if: true && ( matrix.config.target == 'android-arm32' || matrix.config.target == 'android-arm64' || matrix.config.target == 'android-x86_64' )
-        uses: maxim-lobanov/setup-android-tools@v1
+      - if: true && ( matrix.config.target == 'android-arm32' || matrix.config.target == 'android-arm64' || matrix.config.target == 'android-x86_64' )
+        name: Setup android tools (Android)
+        uses: android-actions/setup-android@v3
         with:
-          packages: |
-            platform-tools
-            platforms;android-32
-            build-tools;30.0.2
-            ndk;${{ env.ndk_version }}
+          cmdline-tools-version: 8512546
+          packages: 'platform-tools platforms;android-32 build-tools;30.0.2 ndk;23.1.7779620'
 
       - name: Setup msys2 (Windows)
         if: true && matrix.config.target == 'windows'
