:sparkles: building workflow

--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -207,9 +207,9 @@ jobs:
           cmdline-tools-version: 8512546
           packages: 'platform-tools platforms;android-32 build-tools;30.0.2'
 
-      - if: steps.check_asset.outputs.skip_build != 'true' && ( matrix.config.target == 'android-arm32' || matrix.config.target == 'android-arm64' || matrix.config.target == 'android-x86_64' )
-        name: Install NDK
-        run: sdkmanager "ndk;28.0.13004108"
+      # - if: steps.check_asset.outputs.skip_build != 'true' && ( matrix.config.target == 'android-arm32' || matrix.config.target == 'android-arm64' || matrix.config.target == 'android-x86_64' )
+      #   name: Install NDK
+      #   run: sdkmanager "ndk;28.0.13004108"
   
       - name: Setup msys2 (Windows)
         if: steps.check_asset.outputs.skip_build != 'true' && matrix.config.target == 'windows'
