--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -172,9 +172,9 @@ jobs:
           cmdline-tools-version: 8512546
           packages: 'platform-tools platforms;android-32 build-tools;30.0.2'
       
-      - if: true && ( matrix.config.target == 'android-arm32' || matrix.config.target == 'android-arm64' || matrix.config.target == 'android-x86_64' )
-        name: Install NDK
-        run: sdkmanager "ndk;28.0.13004108"
+      # - if: true && ( matrix.config.target == 'android-arm32' || matrix.config.target == 'android-arm64' || matrix.config.target == 'android-x86_64' )
+      #   name: Install NDK
+      #   run: sdkmanager "ndk;28.0.13004108"
           
       - name: Setup msys2 (Windows)
         if: true && matrix.config.target == 'windows'
